--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-        <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+        <h2>Queremos que seas parte de esta gran fiesta</h2>
+        <p class="lead">Disfruta con nosotros el 03-Marzo-2019</a>.</p>
       </div>
     </div>
     <!-- /.row -->
