--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="top" class="header">
   <div class="text-vertical-center">
     <h1>Edison&Jenny</h1>
-    <h3>"Yo y mi casa serviremos a Jehova"</h3>
+    <h3>"THE LOVE OF A .oblique{ lifetime } "</h3>
     <br>
     <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
   </div>
