--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,17 @@
 <header id="top" class="header">
-  <div class="text-vertical-center">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&effect=brick-sign">
+  <style>
+      .w3-lobster {
+       font-family: "Lobster", Sans-serif;
+       }
+  </style>
+  
+  <div class="text-vertical-center w3-container w3-lobster font-effect-brick-sign">
     <h1>Edison&Jenny</h1>
-    <h3> class=bold: "THE LOVE OF A"</h3>
+    <h3 class="w3-large" > THE LOVE OF A </h3>
     <br>
     <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
   </div>
