--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
   
   <div class="text-vertical-center w3-container w3-lobster font-effect-brick-sign">
     <h1>Edison&Jenny</h1>
-    <h3 class="w3-large"> THE LOVE OF A </h3> <p class="w3-xlarge"> lifetime </p>
+    <h3 class="w3-large"> THE LOVE OF A <h3> <p class="w3-xlarge"> lifetime </p>
     <br>
     <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
   </div>
