--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,16 +3,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&effect=brick-sign">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
   <style>
       .w3-lobster {
        font-family: "Lobster", Sans-serif;
        }
   </style>
+  <style>
+      .w3-tangerine {
+      font-family: "Tangerine", serif;
+      }
+  </style>
   
-  <div class="text-vertical-center w3-container w3-lobster font-effect-brick-sign">
+  <div class="text-vertical-center">
     <h1>Edison&Jenny</h1>
+  </div>
+  
+  <div class=" w3-container w3-tangerine w3-font-effect-brick-sign">
     <p> THE LOVE OF A  <span class="w3-xlarge"> lifetime </span> </p> 
-    <br>
+  </div>
+  
+  <div class=" w3-container w3-lobster w3-font-effect-brick-sign">
+  <br>
     <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
   </div>
+  
 </header>
