--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,11 +19,11 @@
     <h1>Edison&Jenny</h1>
   </div>
   
-  <div class=" w3-container w3-tangerine w3-font-effect-brick-sign">
-    <p> THE LOVE OF A  <span class="w3-xlarge"> lifetime </span> </p> 
+  <div class="text-vertical-center w3-container w3-tangerine w3-font-effect-brick-sign">
+    <h3> THE LOVE OF A  <span class="w3-xlarge"> lifetime </span> </h3> 
   </div>
   
-  <div class=" w3-container w3-lobster w3-font-effect-brick-sign">
+  <div class="text-vertical-center w3-container w3-lobster w3-font-effect-brick-sign">
   <br>
     <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
   </div>
