--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,20 +10,14 @@
        }
   </style>
   <style>
-      .w3-tangerine {
+      .w4-tangerine {
       font-family: "Tangerine", serif;
       }
   </style>
   
-  <div class="text-vertical-center">
+  <div class="text-vertical-center w3-container w3-tangerine w3-font-effect-brick-sign w4-container w4-lobster w4-font-effect-brick-sign">
     <h1>Edison&Jenny</h1>
-  </div>
-  
-  <div class="text-vertical-center w3-container w3-tangerine w3-font-effect-brick-sign">
     <h3> THE LOVE OF A  <span class="w3-xlarge"> lifetime </span> </h3> 
-  </div>
-  
-  <div class="text-vertical-center w3-container w3-lobster w3-font-effect-brick-sign">
   <br>
     <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
   </div>
