--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,9 +17,9 @@
   
   <div class="text-vertical-center w3-container w3-tangerine w3-font-effect-brick-sign w4-container w4-lobster w4-font-effect-brick-sign">
     <h1>Edison&Jenny</h1>
-    <h3> THE LOVE OF A  <span class="w3-xlarge"> lifetime </span> </h3> 
+    <h3> THE LOVE OF A </h3>  <span class="w3-xlarge"> lifetime </span> 
   <br>
-    <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+    <a href="#about" class="btn btn-dark btn-lg w3-large">Find Out More</a>
   </div>
   
 </header>
