--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,10 +14,12 @@
       font-family: "Tangerine", serif;
       }
   </style>
+  <div class="text-vertical-center w4-container w4-tangerine">
+  <h1>Edison&Jenny</h1>
+    <h3> THE LOVE OF A </h3>  <p class="w3-xlarge"> lifetime </p> 
+  </div>
   
-  <div class="text-vertical-center w3-container w3-tangerine w3-font-effect-brick-sign w4-container w4-lobster w4-font-effect-brick-sign">
-    <h1>Edison&Jenny</h1>
-    <h3> THE LOVE OF A </h3>  <span class="w3-xlarge"> lifetime </span> 
+  <div class="text-vertical-center w3-container w3-lobster w3-font-effect-brick-sign">
   <br>
     <a href="#about" class="btn btn-dark btn-lg w3-large">Find Out More</a>
   </div>
