--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
     <h3> THE LOVE OF A </h3>  <p class="w3-xlarge"> lifetime </p> 
   </div>
   
-  <div class="text-vertical-center w3-container w3-lobster w3-font-effect-brick-sign">
+  <div class="text-vertical-center" >
     <a href="#about" class="btn btn-dark btn-lg w3-large">Find Out More</a>
   </div>
   
