--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
       font-family: "Tangerine", serif;
       }
   </style>
-  <div class="text-vertical-center w4-container w4-tangerine w3-lobster font-effect-brick-sign">
+  <div class="text-vertical-center w4-container w4-tangerine w3-container w3-lobster font-effect-brick-sign">
     <h1>Edison&Jenny</h1>
       <h3> THE LOVE OF A </h3>  <p class="w3-xxlarge"> lifetime </p> 
         <br>
