--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
   </style>
   <div class="text-vertical-center w4-container w4-tangerine w3-container w3-lobster font-effect-brick-sign">
     <h1>Edison&Jenny</h1>
-      <h3> THE LOVE OF A </h3>  <p class="w4-xxlarge"> lifetime </p> 
+      <h3> THE LOVE OF A </h3>  <p class="w4-large"> lifetime </p> 
         <br>
           <a href="#about" class="btn btn-dark btn-lg w3-large">Find Out More</a>
   </div>
