--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,23 +2,25 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&effect=brick-sign">
+  <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&effect=brick-sign"> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
-  <style>
+  
+  <!--<style>
       .w3-lobster {
        font-family: "Lobster", Sans-serif;
        }
-  </style>
+  </style> -->
+  
   <style>
-      .w4-tangerine {
+      .w3-tangerine {
       font-family: "Tangerine", serif;
       }
   </style>
-  <div class="text-vertical-center w4-container w4-tangerine w3-container w3-lobster font-effect-brick-sign">
-    <h1>Edison&Jenny</h1>
-      <h3> THE LOVE OF A </h3>  <p class="w4-xxxlarge"> lifetime </p> 
-        <br>
-          <a href="#about" class="btn btn-dark btn-lg w3-xlarge">Find Out More</a>
+  <div class="text-vertical-center w3-container w3-tangerine">
+    <h1>Edison&Jenny</h1> 
+      <h3> THE LOVE OF A <span class="w3-xxxlarge"> lifetime </span>  </h3>  
+        <!-- <br>
+          <a href="#about" class="btn btn-dark btn-lg w3-xlarge">Nuestra Historia</a> -->
   </div>
   
 
