--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
   </style>
   <div class="text-vertical-center w3-container w3-tangerine">
     <h1>Edison&Jenny</h1> 
-      <h3> THE LOVE OF A  </h3>  <p class="w3-xxxlarge"> lifetime </p> 
+      <h5> THE LOVE OF A  </h5>  <p class="w3-jumbo"> lifetime </p> 
         <!-- <br>
           <a href="#about" class="btn btn-dark btn-lg w3-xlarge">Nuestra Historia</a> -->
   </div>
