--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
   <div class="text-vertical-center w3-container w3-tangerine">
     <h1>Edison&Jenny</h1> 
     <br><br><br>
-      <h5> THE LOVE OF A  </h5>  <p class="w3-jumbo"> lifetime </p> 
+      <p class="w3"> THE LOVE OF A  </p><p class="w3-jumbo"> lifetime </p> 
         <!-- <br>
           <a href="#about" class="btn btn-dark btn-lg w3-xlarge">Nuestra Historia</a> -->
   </div>
