--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,10 +16,15 @@
       font-family: "Tangerine", serif;
       }
   </style>
+  
+  div.c {
+  line-height: 80%;
+  }
+
   <div class="text-vertical-center w3-container w3-tangerine">
     <h1>Edison&Jenny</h1> 
     <br><br><br>
-      <h6> THE LOVE OF A </h6> <p class="w3-jumbo"> lifetime </p> 
+      <h5 class="c"> THE LOVE OF A </h5> <p class="w3-jumbo"> lifetime </p> 
         <!-- <br>
           <a href="#about" class="btn btn-dark btn-lg w3-xlarge">Nuestra Historia</a> -->
   </div>
