--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       font-family: "Tangerine", serif;
       }
       div.c {
-       line-height: 60%;
+      ;
       }
   </style>
   
@@ -25,7 +25,7 @@
   <div class="text-vertical-center w3-container w3-tangerine">
     <h1>Edison&Jenny</h1> 
     <br><br><br>
-      <h5 class="c"> THE LOVE OF A </h5> <p class="w3-jumbo"> lifetime </p> 
+      <h5> THE LOVE OF A </h5> <p class="w3-jumbo"   line-height: 60% > lifetime </p> 
         <!-- <br>
           <a href="#about" class="btn btn-dark btn-lg w3-xlarge">Nuestra Historia</a> -->
   </div>
