--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,16 +16,16 @@
       font-family: "Tangerine", serif;
       }
       div.c {
-      ;
+      line-height: 60% ;
       }
   </style>
   
   
 
-  <div class="text-vertical-center w3-container w3-tangerine">
+  <div class="text-vertical-center w3-container w3-tangerine c">
     <h1>Edison&Jenny</h1> 
     <br><br><br>
-      <h5> THE LOVE OF A </h5> <p class="w3-jumbo"   line-height: 60% > lifetime </p> 
+      <h5> THE LOVE OF A </h5> <p class="w3-jumbo"> lifetime </p> 
         <!-- <br>
           <a href="#about" class="btn btn-dark btn-lg w3-xlarge">Nuestra Historia</a> -->
   </div>
