--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,9 +21,8 @@
   </style>
   
   
-
+    <h1 align="center">Edison&Jenny</h1> 
   <div class="text-vertical-center w3-container w3-tangerine c">
-    <h1>Edison&Jenny</h1> 
     <br><br><br>
       <h5> THE LOVE OF A </h5> <p class="w3-jumbo"> lifetime </p> 
         <!-- <br>
