--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
   </style>
   
   
-    <h1 align="center">Edison&Jenny</h1> 
+ <h1 class="text-vertical-center"> Edison&Jenny</h1> 
   <div class="text-vertical-center w3-container w3-tangerine c">
     <br><br><br>
       <h5> THE LOVE OF A </h5> <p class="w3-jumbo"> lifetime </p> 
