--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -13,12 +13,10 @@ body {
 }
 
 body {
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&effect=brick-sign">
+    
 
-    font-family: "Tangerine", serif;
-    /* font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif; */
+   
+    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif; 
 }
 
 .text-vertical-center {
@@ -32,7 +30,7 @@ body {
     padding: 0;
     font-size: 4.5em;
     font-weight: 700;
-    color: #FFFFFF
+    color: #FFFFFF;
 }
 
 /* Custom Button Styles */
