--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,11 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&effect=brick-sign"> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
   
   <!--<style>
       .w3-lobster {
-       font-family: "Lobster", Sans-serif;
+      
        }
   </style> -->
   
@@ -15,6 +16,9 @@
       .w3-tangerine {
       font-family: "Tangerine", serif;
       }
+      h1.intro {
+     font-family: "Lobster", Sans-serif;
+  }
       div.c {
       line-height: 70% ;
       }
@@ -23,7 +27,7 @@
   
 
   <div class="text-vertical-center w3-container w3-tangerine c">
-    <h1> Edison&Jenny</h1> 
+    <h1 class="h1.intro"> Edison&Jenny</h1> 
     <br><br><br>
       <h5> THE LOVE OF A </h5> <p class="w3-jumbo"> lifetime </p> 
         <!-- <br>
