--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,10 +24,11 @@
       }
   </style>
   
+<div class="text-vertical-center h1.intro">  
+  <h1> Edison&Jenny</h1> 
+ </div>
   
-
-  <div class="text-vertical-center w3-container w3-tangerine c">
-    <h1 class="h1.intro"> Edison&Jenny</h1> 
+  <div class="text-vertical-center w3-container w3-tangerine c">  
     <br><br><br>
       <h5> THE LOVE OF A </h5> <p class="w3-jumbo"> lifetime </p> 
         <!-- <br>
