--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       .w3-tangerine {
       font-family: "Tangerine", serif;
       }
-      h1.intro {
+      .h1-intro {
      font-family: "Lobster", Sans-serif;
   }
       div.c {
@@ -24,7 +24,7 @@
       }
   </style>
   
-<div class="text-vertical-center h1.intro">  
+<div class="text-vertical-center h1-intro">  
   <h1> Edison&Jenny</h1> 
  </div>
   
