--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -28,7 +28,7 @@ body {
     font-size: 4.5em;
     font-weight: 700;
     color: #FFFFFF;
-    font-family: "Lobster", serif;
+    font-family: "FontAwesome", serif;
 }
 
 /* Custom Button Styles */
