--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
   </style>
   
   <div class="text-vertical-center w3-container w3-tangerine c">  
-    <h1> Edison&Jenny</h1> 
+    <h1> Jenny&Edison</h1> 
     <br><br><br>
       <h5> THE LOVE OF A </h5> <p class="w3-jumbo"> lifetime </p> 
         <!-- <br>
