--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -15,21 +15,21 @@
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="#">
-                <img class="img-portfolio img-responsive" src="img/inicio.jpg">
+                <img class="img-portfolio img-responsive" src="img/inicio.jpeg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="#">
-                <img class="img-portfolio img-responsive" src="img/his.jpg">
+                <img class="img-portfolio img-responsive" src="img/his.jpeg">
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="portfolio-item">
               <a href="#">
-                <img class="img-portfolio img-responsive" src="img/his.jpg">
+                <img class="img-portfolio img-responsive" src="img/his.jpeg">
               </a>
             </div>
           </div>
