--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,68 +1,25 @@
 <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
 <section id="services" class="services bg-primary">
   <div class="container">
-    <div class="row text-center">
-      <div class="col-lg-10 col-lg-offset-1">
-        <h2>Our Services</h2>
-        <hr class="small">
-        <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-cloud fa-stack-1x text-primary"></i>
-            </span>
-              <h4>
-                <strong>Service Name</strong>
-              </h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <a href="#" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-compass fa-stack-1x text-primary"></i>
-            </span>
-              <h4>
-                <strong>Service Name</strong>
-              </h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <a href="#" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-flask fa-stack-1x text-primary"></i>
-            </span>
-              <h4>
-                <strong>Service Name</strong>
-              </h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <a href="#" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-shield fa-stack-1x text-primary"></i>
-            </span>
-              <h4>
-                <strong>Service Name</strong>
-              </h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <a href="#" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
-        </div>
-        <!-- /.row (nested) -->
-      </div>
-      <!-- /.col-lg-10 -->
-    </div>
+   <div class="row text-center">
+    
+     <p> No sabiamos que ese dia llegaria, hasta cuando Edison volteo a verla y supo que no se trataba de algo simple. La complejidad de
+       lo que se avecinaba era fuerte y no habia atajos, por lo que el amor decidio dar tregua y llevar a cabo el primer paso: La amistad. 
+       El primer movimiento, que muchos desechan, pero que es la base de todo buen amor, y es que Edison y jenny empezaron a reir, a platicar,
+       a caminar, a conocer los pensamientos del otro y tratar de escribirlos en sus corazones. No hubo un momento donde se despegaran de sus telefonos,
+       y es que la amistad es la raiz del amor por lo que los mensajes que se enviaban estaban escritos con el proposito de que las raices 
+       crecerian lo mas profundo posibles. Aquellas platicas que llegaban hasta la 1 am deletreaban lo que se avecinaba, ¡si!, fue una tarde cuando 
+       Edison convencio a las amistades de Jenny para entregar la primera sorpresa. Ese 18 de septiembre del 2014 fue el dia en que Jenny dio el primer si; aquella
+       respuesta fue contundente a tal grado que Edison supo que Jenny tenia un caracter de una mujer guerrera, capaza y decidida. A su vez, Jenny
+       fue envuelta de un calido abrazo y supo que esto no era un juego, si no, una realidad. Las raices del amor empezaron a crecer conforme al tiempo,
+       aunque habian dias en que no salia el sol, dias de lluvias y tormentas que marcaban un antes y un despues, Jenny y Edison no claudicaban. Los dias
+       empezaban hacerse cortos y los cortos dias empezaron a llamarse horas, horas que eran minutos, porque el amor no sigue tiempo. Entonces, una tarde, Dios escribio 
+       en el corazon de Edison el deseo de caminar por siempre, "hasta que la muerte los separe", con Jenny. Y es que el segundo paso no se de a la ligera,
+       se piensa y se razona, se ora y se consulta. Por eso, llego la platica anelada entre Jenny y Edison: CONSTRUIR SU PROPIA HISTORIA. Y asi fue, la decision fue tomada con
+       apoyo de sus padres y con mucha oracion. Y fue aquel dia en que empezaron los preparativos para dar una sorpresa, la sorpresa del segundo ¡Si!. Llegaron los mariachis,
+       los globos y las velas, Priscila (hermana de la novia) y Arturo(amigo de la familia) apoyaron en esta aventura. Jenny quedo sorprendida y con nervios,
+       mirando a los ojos de Edison vio que el camino era el correcto y como un espejo, se repitio la misma escena del primer ¡Si!. Todo sucedio en cuestion 
+       de segundos segun en la apreciacion de los novios, aunque fueron minutos, minutos que el amor tomo nota y escribio: "THE LOVE OF A LIFETIME".
     <!-- /.row -->
   </div>
   <!-- /.container -->
