--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,5 +1,6 @@
 <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-<section id="services" class="services bg-primary">
+<section id="services">
+   <div class="container">
    <div class="row text-center">
     
      <p> No sabiamos que ese dia llegaria, hasta cuando Edison volteo a verla y supo que no se trataba de algo simple. La complejidad de
@@ -21,6 +22,7 @@
        de segundos segun en la apreciacion de los novios, aunque fueron minutos, minutos que el amor tomo nota y escribio: "THE LOVE OF A LIFETIME".
      </p>
     <!-- /.row -->
+      </div>
   <!-- /.container -->
    </div>
 </section>
