--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,8 +1,8 @@
 <section id="about" class="about">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2>Queremos que seas parte del principio de esta hermosa historia</h2>
+      <div class="col-lg-12 text-center ">
+        <h2  font-family: 'Glyphicons Halflings'>Queremos que seas parte del principio de esta hermosa historia</h2>
         <p class="lead">Disfruta con nosotros el 03-Marzo-2019</a>.</p>
       </div>
     </div>
