--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,6 +2,7 @@
 <section id="services">
    <div class="container">
    <div class="row text-center">
+       <div class="col-lg-10 col-lg-offset-1">
     
      <p> No sabiamos que ese dia llegaria, hasta cuando Edison volteo a verla y supo que no se trataba de algo simple. La complejidad de
        lo que se avecinaba era fuerte y no habia atajos, por lo que el amor decidio dar tregua y llevar a cabo el primer paso: La amistad. 
@@ -25,4 +26,6 @@
       </div>
   <!-- /.container -->
    </div>
+      
+       </div>
 </section>
