--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center ">
         <h2>Queremos que seas parte del principio de esta hermosa historia</h2>
-        <p class="lead">Disfruta con nosotros el 03-Marzo-2019</a>.</p>
+        <p class="p.oblique">Disfruta con nosotros el 03-Marzo-2019</a>.</p>
       </div>
     </div>
     <!-- /.row -->
