--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,6 @@
 <section id="about" class="about">
+  <link href="https://fonts.googleapis.com/css?family=Charm" rel="stylesheet">
+  
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center ">
