--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,11 +1,11 @@
 <section id="about" class="about">
   <link href="https://fonts.googleapis.com/css?family=Charm" rel="stylesheet">
-  
+  <link href="font-awesome.css" rel="stylesheet">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center ">
         <h2>Queremos que seas parte del principio de esta hermosa historia</h2>
-        <p >Disfruta con nosotros el 03-Marzo-2019</a>.</p>
+        <p class= "marzo">Disfruta con nosotros el 03-Marzo-2019</a>.</p>
       </div>
     </div>
     <!-- /.row -->
